--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     expose:
       - '5432'
     volumes:
-      - World-View:/var/lib/postgresql/data
+      - world-view:/var/lib/postgresql/data
       - ./init_data:/docker-entrypoint-initdb.d
   web:
     image: node:lts
@@ -23,4 +23,4 @@ services:
       - ./:/home/node/app
     command: 'npm start'
 volumes:
-  World-View:
+  world-view:
