--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -9,7 +9,9 @@
         "express-handlebars": "^7.1.2",
         "handlebars": "^4.7.8",
         "axios": "^1.1.3",
-        "bcrypt": "^5.1.0"
+        "bcrypt": "^5.1.0",
+        "@google-cloud/local-auth": "^2.1.0",
+        "googleapis": "^105.0.0"
       },
       "devDependencies": {
         "nodemon": "^2.0.7",
