added commented out docker run command that doesnt use testing

--- a/ProjectSourceCode/docker-compose.yaml
+++ b/ProjectSourceCode/docker-compose.yaml
@@ -22,5 +22,6 @@ services:
     volumes:
       - ./:/home/node/app
     command: 'npm run testandrun'
+    #command: 'npm run'
 volumes:
   world-view:
