--- a/ProjectSourceCode/package.json
+++ b/ProjectSourceCode/package.json
@@ -7,6 +7,7 @@
         "body-parser": "1.20.0",
         "express-session": "1.17.3",
         "express-handlebars": "^7.1.2",
+        "express-fileupload": "^1.5.0",
         "handlebars": "^4.7.8",
         "axios": "^1.1.3",
         "bcrypt": "^5.1.0"
