--- a/src/.env
+++ b/src/.env
@@ -4,4 +4,4 @@ POSTGRES_PASSWORD="ENTER PASSWORD"
 POSTGRES_DB="ENTER DB NAME"
 
 # Node vars
-SESSION_SECRET="ENTER SECRET"
+SESSION_SECRET="ENTEnow if I change thisR SECRET"
